feat: SearchViaSpecifications